--- a/index.html
+++ b/index.html
@@ -109,39 +109,39 @@
         <!-- SERVICES___________________________________________________________________________ -->
         <div id="services" class="flexSideSide">
             <!-- Blocks  -->
-            <div id="serviceLeft" class="flex">
+            <div id="serviceLeft" class="flexSideSide">
                 <!-- Left Blocks  -->
                 <div>
-                    <section class="BCKwhite shadow">
+                    <section class="BCKwhite shadow servBlock">
                         <header><h2 class="TXTmainDark fSize22 fBold fontSec">Corporate finance</h2></header>
-                        <p class="fSize18">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed …</p>
+                        <p class="fSize18 TXTjustif">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed …</p>
                         <p><a href="#">Read more</a></p>
                     </section>
-                    <section class="BCKwhite shadow">
+                    <section class="BCKwhite shadow servBlock">
                         <header><h2 class="TXTmainDark fSize22 fBold fontSec">Market analysis</h2></header>
-                        <p class="fSize18">Nibh vel velit auctor aliqunean sollicitudinlorem bibendum auci …</p>
+                        <p class="fSize18 TXTjustif">Nibh vel velit auctor aliqunean sollicitudinlorem bibendum auci …</p>
                         <p><a href="#">Read more</a></p>
                     </section>
                 </div>
                 <!-- Right Blocks -->
                 <div>
-                    <section class="BCKwhite shadow">
+                    <section class="BCKwhite shadow servBlock">
                         <header><h2 class="TXTmainDark fSize22 fBold fontSec">Audit & Evaluation</h2></header>
-                        <p class="fSize18">Cras risus arcu, sodales ac, ultrices ac, mollis quis, justo. Sed a libero. …</p>
+                        <p class="fSize18 TXTjustif">Cras risus arcu, sodales ac, ultrices ac, mollis quis, justo. Sed a libero. …</p>
                         <p><a href="#">Read more</a></p>
                     </section>
-                    <section class="BCKwhite shadow">
+                    <section class="BCKwhite shadow servBlock">
                         <header><h2 class="TXTmainDark fSize22 fBold fontSec">Sales & Trade</h2></header>
-                        <p class="fSize18">Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi …</p>
+                        <p class="fSize18 TXTjustif">Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi …</p>
                         <p><a href="#">Read more</a></p>
                     </section>
                 </div>
             </div>
             <!-- Solution  -->
-            <div id="serviceRight">
+            <div id="serviceRight" class="flexCol">
                 <section>
                     <header><h2 class="TXTmainDark fSize34 fBold fontSec">Get a solutions to your businesses</h2></header>
-                    <p class="fSize18">Our consultants help address your most challenging issues by providing strategic, financial, operational, and IT services.</p>
+                    <p class="fSize18 TXTjustif">Our consultants help address your most challenging issues by providing strategic, financial, operational, and IT services.</p>
                     <div><a class="button" href="#">Order Service</a></div>
                 </section>
             </div>
@@ -149,11 +149,13 @@
         <!-- COMMUNITY___________________________________________________________________________ -->
         <section id="community" class="flexSideSide">
             <div id="grayblock"></div>
-            <header><h2 class="TXTmainDark fSize34 fBold fontSec">We serve fine services in creative community</h2></header>
-            <p class="fSize18">Commodo nulla facilisi nullam vehicula ipsum sociis. Faucibus scelerisque eleifend donec pretium necud vulputate sapien nec, elit eget gravida cum. </p>
-            <div class="flex">
-                <div><a class="button" href="#">Be One of Us</a></div>
-                <div><a class="TXTmainDark fSize15 linkPink" href="#">Support projects</a></div>
+            <div id="communityR" class="flexCol">
+                <header><h2 class="TXTmainDark fSize34 fBold fontSec">We serve fine services in creative community</h2></header>
+                <p class="fSize18 TXTjustif">Commodo nulla facilisi nullam vehicula ipsum sociis. Faucibus scelerisque eleifend donec pretium necud vulputate sapien nec, elit eget gravida cum. </p>
+                <div class="flex">
+                    <div><a class="button" href="#">Be One of Us</a></div>
+                    <div><a class="TXTmainDark fSize15 linkPink" href="#">Support projects</a></div>
+                </div>
             </div>
         </section>
     </main>
