--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
             <div id="links">
                 <p class="TXTmainDark fSize20 fBold fontSec">Links</p>
                 <div class="flex">
-                    <ul class="fSize18">
+                    <ul class="linklist fSize18">
                         <li><a class="TXTmainDark linkPink" href="#">About company</a></li>
                         <li><a class="TXTmainDark linkPink" href="#">Our services</a></li>
                         <li><a class="TXTmainDark linkPink" href="#">Portfolio</a></li>
                     </ul>
-                    <ul class="fSize18">
+                    <ul class="linklist fSize18">
                         <li><a class="TXTmainDark linkPink" href="#">Team</a></li>
                         <li><a class="TXTmainDark linkPink" href="#">Contact</a></li>
                     </ul>
