ajout des marges

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <main class="container">
         <!-- PRICE___________________________________________________________________________ -->
-        <div id="price" class="flexSideSide" class="BCKwhite shadow">
+        <div id="price" class="flexSideSide" class="sepdown">
             <!-- Basic  -->
             <section id="priceBasic" class="BCKwhite shadow priceblock"">
                 < class="flexSideSide">
@@ -99,7 +99,7 @@
             </section>
         </div>
         <!-- TESTIMONIAL___________________________________________________________________________ -->
-        <section id="testimonial" class="TXTcenter BCKgray">
+        <section id="testimonial" class="TXTcenter BCKgray sepdown">
             <header><h2 class="TXTmainDark fSize34 fBold fontSec">Happy clients about us</h2></header>
             <p class="fSize18">This is the perfect solution for our business. Well-coordinated teamwork and knowledge in the field of our business created the perfect product for the development of the company. We have already seen amazing results.</p>
             <div id="colorball" class="BCKmain"></div>
@@ -107,7 +107,7 @@
             <p>Marketing expert - ReeDip</p>
         </section>
         <!-- SERVICES___________________________________________________________________________ -->
-        <div id="services" class="flexSideSide">
+        <div id="services" class="flexSideSide sepdown">
             <!-- Blocks  -->
             <div id="serviceLeft" class="flexSideSide">
                 <!-- Left Blocks  -->
@@ -147,7 +147,7 @@
             </div>
         </div>
         <!-- COMMUNITY___________________________________________________________________________ -->
-        <section id="community" class="flexSideSide">
+        <section id="community" class="flexSideSide sepdown">
             <div id="grayblock"></div>
             <div id="communityR" class="flexCol">
                 <header><h2 class="TXTmainDark fSize34 fBold fontSec">We serve fine services in creative community</h2></header>
@@ -162,7 +162,7 @@
     <!-- FOOTER _____________________________________________________________________________  -->
     <footer class="container">
         <!-- Subscribe  -->
-        <div id="subscribe" class="flexSideSide BCKmain TXTwhite">
+        <div id="subscribe" class="flexSideSide BCKmain TXTwhite sepdown">
             <p class="fSize22">Subscribe to our newsletters</p>
             <div><a id="sendButton" class="fontSec" href="#">Send</a></div>
         </div>
