fin non responsive avant corrections

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         </div>
     </header>
 
-    <main class="container">
+    <main>
         <!-- PRICE___________________________________________________________________________ -->
-        <div id="price" class="flexSideSide" class="sepdown">
+        <div id="price" class="container flexSideSide sepdown">
             <!-- Basic  -->
             <section id="priceBasic" class="BCKwhite shadow priceblock"">
-                < class="flexSideSide">
+                <div class="flexSideSide">
                     <header><h2 class="TXTmainDark fSize20 fBold fontSec">Basic</h2></header>
                     <p id="buttonchoice" class="BCKgray TXThighlight fSize10">best choise </p>
                 </div>
