--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
     <header id="mainheader">
         <div class="container">
             <!-- NavBar  -->
-            <nav id="navbar" class="flexSideSide">
-                <div id="navleft" class="flexSideSide">
+            <nav id="navbar" class="flex">
                     <div class="logo"></div>
                     <menu class="flexSideSide">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Pages</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a class="TXTgrayDark" href="#">Home</a></li>
+                        <li><a class="TXTgrayDark" href="#">Pages</a></li>
+                        <li><a class="TXTgrayDark" href="#">Services</a></li>
+                        <li><a class="TXTgrayDark" href="#">Portfolio</a></li>
+                        <li><a class="TXTgrayDark" href="#">Blog</a></li>
+                        <li><a class="TXTgrayDark" href="#">Contact</a></li>
                     </menu>
-                </div>
-                <form id="searchform" action=""><input type="search" name="search" aria-label="Search here"></form>
             </nav>
             <!-- Title  -->
             <section id="title">
