--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <nav id="navbar" class="flex">
                     <div class="logo"></div>
                     <menu class="flexSideSide">
-                        <li><a class="TXTgrayDark" href="#">Home</a></li>
-                        <li><a class="TXTgrayDark" href="#">Pages</a></li>
-                        <li><a class="TXTgrayDark" href="#">Services</a></li>
-                        <li><a class="TXTgrayDark" href="#">Portfolio</a></li>
-                        <li><a class="TXTgrayDark" href="#">Blog</a></li>
-                        <li><a class="TXTgrayDark" href="#">Contact</a></li>
+                        <li><a class="TXTgrayDark TXTcenter" href="#">Home</a></li>
+                        <li><a class="TXTgrayDark TXTcenter" href="#">Pages</a></li>
+                        <li><a class="TXTgrayDark TXTcenter" href="#">Services</a></li>
+                        <li><a class="TXTgrayDark TXTcenter" href="#">Portfolio</a></li>
+                        <li><a class="TXTgrayDark TXTcenter" href="#">Blog</a></li>
+                        <li><a class="TXTgrayDark TXTcenter" href="#">Contact</a></li>
                     </menu>
             </nav>
             <!-- Title  -->
@@ -44,10 +44,10 @@
             <section id="priceBasic" class="BCKwhite shadow priceblock"">
                 <div class="flexSideSide">
                     <header><h2 class="TXTmainDark fSize20 fBold fontSec">Basic</h2></header>
-                    <p id="buttonchoice" class="BCKgray TXThighlight fSize10">best choise </p>
+                    <p id="buttonchoice" class="BCKgray TXThighlight fSize10">BEST CHOICE</p>
                 </div>
                 <hr>
-                <p class="TXTmainDark fSize50 fBold fontSec">15$</p>
+                <p class="TXTmainDark fSize50 fBold fontSec prix">15$</p>
                 <p>Per month</p>
                 <div class="ulcenter">
                     <ul class="fSize18">
@@ -64,7 +64,7 @@
             <section id="priceStandard" class="BCKwhite shadow priceblock">
                 <header><h2 class="TXTmainDark fSize20 fBold fontSec">Standard</h2></header>
                 <hr>
-                <p class="TXTmainDark fSize50 fBold fontSec">37$</p>
+                <p class="TXTmainDark fSize50 fBold fontSec prix">37$</p>
                 <p>Per month</p>
                 <div class="ulcenter">
                     <ul class="fSize18">
@@ -81,7 +81,7 @@
             <section id="priceAdvance" class="BCKwhite shadow priceblock">
                 <header><h2 class="TXTmainDark fSize20 fBold fontSec">Advance</h2></header>
                 <hr>
-                <p class="TXTmainDark fSize50 fBold fontSec">42$</p>
+                <p class="TXTmainDark fSize50 fBold fontSec prix">42$</p>
                 <p>Per month</p>
                 <div class="ulcenter">
                     <ul class="fSize18">
@@ -96,13 +96,15 @@
             </section>
         </div>
         <!-- TESTIMONIAL___________________________________________________________________________ -->
-        <section id="testimonial" class="TXTcenter BCKgray sepdown">
-            <header><h2 class="TXTmainDark fSize34 fBold fontSec">Happy clients about us</h2></header>
-            <p class="fSize18">This is the perfect solution for our business. Well-coordinated teamwork and knowledge in the field of our business created the perfect product for the development of the company. We have already seen amazing results.</p>
-            <div id="colorball" class="BCKmain"></div>
-            <p class="TXTmainDark fSize20 fBold fontSec">Kevin Drives</p>
-            <p>Marketing expert - ReeDip</p>
-        </section>
+        <div class="BCKgray">
+            <section id="testimonial" class="container TXTcenter sepdown flexCol">
+                <header><h2 class="TXTmainDark fSize34 fBold fontSec">Happy clients about us</h2></header>
+                <p class="fSize18">This is the perfect solution for our business. Well-coordinated teamwork and knowledge in the field of our business created the perfect product for the development of the company. We have already seen amazing results.</p>
+                <div id="colorball" class="BCKmain"></div>
+                <p class="TXTmainDark fSize20 fBold fontSec">Kevin Drives</p>
+                <p>Marketing expert - ReeDip</p>
+            </section>
+        </div>
         <!-- SERVICES___________________________________________________________________________ -->
         <div id="services" class="flexSideSide sepdown">
             <!-- Blocks  -->
