--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p class="TXTmainDark fSize50 fBold fontSec prix">15$</p>
                 <p>Per month</p>
                 <div class="ulcenter">
-                    <ul class="fSize18">
+                    <ul class="fSize18 p0">
                         <li>Free updates</li>
                         <li>Custom domain</li>
                         <li>Outstanding support</li>
@@ -67,7 +67,7 @@
                 <p class="TXTmainDark fSize50 fBold fontSec prix">37$</p>
                 <p>Per month</p>
                 <div class="ulcenter">
-                    <ul class="fSize18">
+                    <ul class="fSize18 p0">
                         <li>Free updates</li>
                         <li>Custom domain</li>
                         <li>Outstanding support</li>
@@ -84,7 +84,7 @@
                 <p class="TXTmainDark fSize50 fBold fontSec prix">42$</p>
                 <p>Per month</p>
                 <div class="ulcenter">
-                    <ul class="fSize18">
+                    <ul class="fSize18 p0">
                         <li>Free updates</li>
                         <li>Custom domain</li>
                         <li>Outstanding support</li>
@@ -106,7 +106,7 @@
             </section>
         </div>
         <!-- SERVICES___________________________________________________________________________ -->
-        <div id="services" class="flexSideSide sepdown">
+        <div id="services" class="container flexSideSide sepdown">
             <!-- Blocks  -->
             <div id="serviceLeft" class="flexSideSide">
                 <!-- Left Blocks  -->
