--- a/index.html
+++ b/index.html
@@ -139,19 +139,19 @@
             <!-- Solution  -->
             <div id="serviceRight" class="flexCol">
                 <section>
-                    <header><h2 class="TXTmainDark fSize34 fBold fontSec">Get a solutions to your businesses</h2></header>
+                    <header><h2 class="TXTmainDark fSize34 fBold fontSec sepdown2">Get a solutions to your businesses</h2></header>
                     <p class="fSize18 TXTjustif">Our consultants help address your most challenging issues by providing strategic, financial, operational, and IT services.</p>
                     <div><a class="button" href="#">Order Service</a></div>
                 </section>
             </div>
         </div>
         <!-- COMMUNITY___________________________________________________________________________ -->
-        <section id="community" class="flexSideSide sepdown">
-            <div id="grayblock"></div>
+        <section id="community" class="container flexSideSide sepdown">
+            <div id="grayblock" class="BCKgray"></div>
             <div id="communityR" class="flexCol">
                 <header><h2 class="TXTmainDark fSize34 fBold fontSec">We serve fine services in creative community</h2></header>
                 <p class="fSize18 TXTjustif">Commodo nulla facilisi nullam vehicula ipsum sociis. Faucibus scelerisque eleifend donec pretium necud vulputate sapien nec, elit eget gravida cum. </p>
-                <div class="flex">
+                <div id="commuButtons" class="flex">
                     <div><a class="button" href="#">Be One of Us</a></div>
                     <div><a class="TXTmainDark fSize15 linkPink" href="#">Support projects</a></div>
                 </div>
@@ -203,5 +203,7 @@
             <p class="fontSec fSize14">© 2019 <span class="fBold">Elipso Sketch Template</span> by <a class="TXTmain" href="#">merkulove</a></p>
         </div>
     </footer>
+
+    <div style="height:9999px"></div>
 </body>
 </html>
