--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <header>
                     <h1 class="fontSec fSize50 fBold TXTmainDark">Our Prices</h1>
                     <p class="fSize22 TXTjustif">We help company set up business strategy including design brand identiy or product design service.</p>
-                    <div class="flex">
+                    <div class="flex ButtonBox">
                         <div><a class="button" href="#">Free consultation</a></div>
                         <div><a class="TXTmainDark linkPink" href="#">View projects</a></div>
                     </div>
@@ -151,7 +151,7 @@
             <div id="communityR" class="flexCol">
                 <header><h2 class="TXTmainDark fSize34 fBold fontSec">We serve fine services in creative community</h2></header>
                 <p class="fSize18 TXTjustif">Commodo nulla facilisi nullam vehicula ipsum sociis. Faucibus scelerisque eleifend donec pretium necud vulputate sapien nec, elit eget gravida cum. </p>
-                <div id="commuButtons" class="flex">
+                <div class="flex ButtonBox">
                     <div><a class="button" href="#">Be One of Us</a></div>
                     <div><a class="TXTmainDark fSize15 linkPink" href="#">Support projects</a></div>
                 </div>
@@ -171,7 +171,6 @@
             <div id="footleft">
                 <div class="logo"></div>
                 <p class="fSize18">The wise man therefore always holds in these on matters to this principle of selection he rejects the to secure other friend.</p>
-                <hr>
             </div>
             <!-- Contact infos  -->
             <address id="footContact">
@@ -179,14 +178,14 @@
                 <ul class="fSize18">
                     <li>2 St Gabriel Walk London SE1 6FG, UK</li>
                     <li>+44 141 552 3000</li>
-                    <li><a href="mailto:info@merkulov.design">info@merkulov.design</a></li>
+                    <li><a class="TXTgrayDark" href="mailto:info@merkulov.design">info@merkulov.design</a></li>
                 </ul>
             </address>
             <!-- Links  -->
-            <div id="links">
+            <div id="links" class="flexColStart">
                 <p class="TXTmainDark fSize20 fBold fontSec">Links</p>
                 <div class="flex">
-                    <ul class="linklist fSize18">
+                    <ul class="linklist fSize18 p0">
                         <li><a class="TXTmainDark linkPink" href="#">About company</a></li>
                         <li><a class="TXTmainDark linkPink" href="#">Our services</a></li>
                         <li><a class="TXTmainDark linkPink" href="#">Portfolio</a></li>
