--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
             </section>
         </div>
         <!-- TESTIMONIAL___________________________________________________________________________ -->
-        <div class="BCKgray">
-            <section id="testimonial" class="container TXTcenter sepdown flexCol">
+        <div id="testimonialBCK"></div>
+        <div id="testimonialC" class="BCKgray flexCol decalUP">
+            <section id="testimonial" class="container TXTcenter flexCol">
                 <header><h2 class="TXTmainDark fSize34 fBold fontSec">Happy clients about us</h2></header>
                 <p class="fSize18">This is the perfect solution for our business. Well-coordinated teamwork and knowledge in the field of our business created the perfect product for the development of the company. We have already seen amazing results.</p>
                 <div id="colorball" class="BCKmain"></div>
@@ -106,7 +107,7 @@
             </section>
         </div>
         <!-- SERVICES___________________________________________________________________________ -->
-        <div id="services" class="container flexSideSide sepdown">
+        <div id="services" class="container flexSideSide sepdown decalUP">
             <!-- Blocks  -->
             <div id="serviceLeft" class="flexSideSide">
                 <!-- Left Blocks  -->
@@ -146,7 +147,7 @@
             </div>
         </div>
         <!-- COMMUNITY___________________________________________________________________________ -->
-        <section id="community" class="container flexSideSide sepdown">
+        <section id="community" class="container flexSideSide sepdown decalUP">
             <div id="grayblock" class="BCKgray"></div>
             <div id="communityR" class="flexCol">
                 <header><h2 class="TXTmainDark fSize34 fBold fontSec">We serve fine services in creative community</h2></header>
@@ -159,7 +160,7 @@
         </section>
     </main>
     <!-- FOOTER _____________________________________________________________________________  -->
-    <footer class="container">
+    <footer class="container decalUP">
         <!-- Subscribe  -->
         <div id="subscribe" class="flexSideSide BCKmain TXTwhite sepdown">
             <p class="fSize22">Subscribe to our newsletters</p>
