--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <!-- NavBar  -->
             <nav id="navbar" class="flex">
-                    <div class="logo"></div>
+                    <div class="logo"><img src="/img/Logo-White.png" alt="" width="126" height="48"></div>
                     <menu class="flexSideSide">
                         <li><a class="TXTgrayDark TXTcenter" href="#">Home</a></li>
                         <li><a class="TXTgrayDark TXTcenter" href="#">Pages</a></li>
@@ -22,6 +22,7 @@
                         <li><a class="TXTgrayDark TXTcenter" href="#">Blog</a></li>
                         <li><a class="TXTgrayDark TXTcenter" href="#">Contact</a></li>
                     </menu>
+                    <div id="navbutton"><img src="/img/NavButton.svg" alt="" height="45" width="45"></div>
             </nav>
             <!-- Title  -->
             <section id="title">
@@ -42,62 +43,74 @@
         <div id="price" class="container flexSideSide sepdown">
             <!-- Basic  -->
             <section id="priceBasic" class="BCKwhite shadow priceblock"">
-                <div class="flexSideSide">
-                    <header><h2 class="TXTmainDark fSize20 fBold fontSec">Basic</h2></header>
-                    <p id="buttonchoice" class="BCKgray TXThighlight fSize10">BEST CHOICE</p>
-                </div>
-                <hr>
-                <p class="TXTmainDark fSize50 fBold fontSec prix">15$</p>
-                <p>Per month</p>
-                <div class="ulcenter">
-                    <ul class="fSize18 p0">
-                        <li>Free updates</li>
-                        <li>Custom domain</li>
-                        <li>Outstanding support</li>
-                        <li class="alpha70">Unlimited storage</li>
-                        <li class="alpha70">Build responsive website</li>
-                    </ul>
+                <div class="priceflex">
+                    <div>
+                        <div class="flexSideSide">
+                            <header><h2 class="TXTmainDark fSize20 fBold fontSec">Basic</h2></header>
+                            <p id="buttonchoice" class="BCKgray TXThighlight fSize10">BEST CHOICE</p>
+                        </div>
+                        <hr>
+                        <p class="TXTmainDark fSize50 fBold fontSec prix">15$</p>
+                        <p>Per month</p>
+                    </div>
+                    <div class="ulcenter">
+                        <ul class="fSize18 p0">
+                            <li>Free updates</li>
+                            <li>Custom domain</li>
+                            <li>Outstanding support</li>
+                            <li class="alpha70">Unlimited storage</li>
+                            <li class="alpha70">Build responsive website</li>
+                        </ul>
+                    </div>
                 </div>
                 <div><a class="button" href="#">Getting started</a></div>
             </section>
             <!-- Standard  -->
             <section id="priceStandard" class="BCKwhite shadow priceblock">
-                <header><h2 class="TXTmainDark fSize20 fBold fontSec">Standard</h2></header>
-                <hr>
-                <p class="TXTmainDark fSize50 fBold fontSec prix">37$</p>
-                <p>Per month</p>
-                <div class="ulcenter">
-                    <ul class="fSize18 p0">
-                        <li>Free updates</li>
-                        <li>Custom domain</li>
-                        <li>Outstanding support</li>
-                        <li>Unlimited storage</li>
-                        <li class="alpha70">Build responsive website</li>
-                    </ul>
-                </div class="ulcenter">
+                <div class="priceflex">
+                    <div>
+                        <header><h2 class="TXTmainDark fSize20 fBold fontSec">Standard</h2></header>
+                        <hr>
+                        <p class="TXTmainDark fSize50 fBold fontSec prix">37$</p>
+                        <p>Per month</p>
+                    </div>
+                    <div class="ulcenter">
+                        <ul class="fSize18 p0">
+                            <li>Free updates</li>
+                            <li>Custom domain</li>
+                            <li>Outstanding support</li>
+                            <li>Unlimited storage</li>
+                            <li class="alpha70">Build responsive website</li>
+                        </ul>
+                    </div class="ulcenter">
+                </div>
                 <div><a class="button" href="#">Getting started</a></div>
             </section>
             <!-- Advance  -->
             <section id="priceAdvance" class="BCKwhite shadow priceblock">
-                <header><h2 class="TXTmainDark fSize20 fBold fontSec">Advance</h2></header>
-                <hr>
-                <p class="TXTmainDark fSize50 fBold fontSec prix">42$</p>
-                <p>Per month</p>
-                <div class="ulcenter">
-                    <ul class="fSize18 p0">
-                        <li>Free updates</li>
-                        <li>Custom domain</li>
-                        <li>Outstanding support</li>
-                        <li>Unlimited storage</li>
-                        <li>Build responsive website</li>
-                    </ul>
-                </div class="ulcenter">
+                <div class="priceflex">
+                    <div>
+                        <header><h2 class="TXTmainDark fSize20 fBold fontSec">Advance</h2></header>
+                        <hr>
+                        <p class="TXTmainDark fSize50 fBold fontSec prix">42$</p>
+                        <p>Per month</p>
+                    </div>
+                    <div class="ulcenter">
+                        <ul class="fSize18 p0">
+                            <li>Free updates</li>
+                            <li>Custom domain</li>
+                            <li>Outstanding support</li>
+                            <li>Unlimited storage</li>
+                            <li>Build responsive website</li>
+                        </ul>
+                    </div class="ulcenter">
+                </div>
                 <div><a class="button" href="#">Getting started</a></div>
             </section>
         </div>
         <!-- TESTIMONIAL___________________________________________________________________________ -->
         <div id="testimonialBCK"></div>
-        <div id="testimonialC" class="BCKgray flexCol decalUP">
+        <div id="testimonialC" class="BCKgray flexCol">
             <section id="testimonial" class="container TXTcenter flexCol">
                 <header><h2 class="TXTmainDark fSize34 fBold fontSec">Happy clients about us</h2></header>
                 <p class="fSize18">This is the perfect solution for our business. Well-coordinated teamwork and knowledge in the field of our business created the perfect product for the development of the company. We have already seen amazing results.</p>
@@ -170,7 +183,7 @@
         <div id="footbar" class="flexSideSide">
             <!-- Left  -->
             <div id="footleft">
-                <div class="logo"></div>
+                <div class="logo"><img src="/img/Logo-White.png" alt="" width="126" height="48"></div>
                 <p class="fSize18">The wise man therefore always holds in these on matters to this principle of selection he rejects the to secure other friend.</p>
             </div>
             <!-- Contact infos  -->
