correction decalage body

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="decalUP">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="mainheader">
+    <header id="mainheader" class="decalDown">
         <div class="container">
             <!-- NavBar  -->
             <nav id="navbar" class="flex">
@@ -40,7 +40,7 @@
 
     <main>
         <!-- PRICE___________________________________________________________________________ -->
-        <div id="price" class="container flexSideSide sepdown">
+        <div id="price" class="container flexSideSide sepdown decalDown">
             <!-- Basic  -->
             <section id="priceBasic" class="BCKwhite shadow priceblock"">
                 <div class="priceflex">
@@ -109,7 +109,7 @@
             </section>
         </div>
         <!-- TESTIMONIAL___________________________________________________________________________ -->
-        <div id="testimonialBCK"></div>
+        <div id="testimonialBCK" class="decalDown"></div>
         <div id="testimonialC" class="BCKgray flexCol">
             <section id="testimonial" class="container TXTcenter flexCol">
                 <header><h2 class="TXTmainDark fSize34 fBold fontSec">Happy clients about us</h2></header>
@@ -120,7 +120,7 @@
             </section>
         </div>
         <!-- SERVICES___________________________________________________________________________ -->
-        <div id="services" class="container flexSideSide sepdown decalUP">
+        <div id="services" class="container flexSideSide sepdown">
             <!-- Blocks  -->
             <div id="serviceLeft" class="flexSideSide">
                 <!-- Left Blocks  -->
@@ -160,7 +160,7 @@
             </div>
         </div>
         <!-- COMMUNITY___________________________________________________________________________ -->
-        <section id="community" class="container flexSideSide sepdown decalUP">
+        <section id="community" class="container flexSideSide sepdown">
             <div id="grayblock" class="BCKgray"></div>
             <div id="communityR" class="flexCol">
                 <header><h2 class="TXTmainDark fSize34 fBold fontSec">We serve fine services in creative community</h2></header>
@@ -173,7 +173,7 @@
         </section>
     </main>
     <!-- FOOTER _____________________________________________________________________________  -->
-    <footer class="container decalUP">
+    <footer class="container">
         <!-- Subscribe  -->
         <div id="subscribe" class="flexSideSide BCKmain TXTwhite sepdown">
             <p class="fSize22">Subscribe to our newsletters</p>
