--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="mainheader" class="decalDown">
+    <div id="mainheader" class="decalDown">
         <div class="container">
             <!-- NavBar  -->
             <nav id="navbar" class="flex">
@@ -36,13 +36,13 @@
                 </header>
             </section>
         </div>
-    </header>
+    </div>
 
     <main>
         <!-- PRICE___________________________________________________________________________ -->
         <div id="price" class="container flexSideSide sepdown decalDown">
             <!-- Basic  -->
-            <section id="priceBasic" class="BCKwhite shadow priceblock"">
+            <section id="priceBasic" class="BCKwhite shadow priceblock">
                 <div class="priceflex">
                     <div>
                         <div class="flexSideSide">
@@ -82,7 +82,7 @@
                             <li>Unlimited storage</li>
                             <li class="alpha70">Build responsive website</li>
                         </ul>
-                    </div class="ulcenter">
+                    </div>
                 </div>
                 <div><a class="button" href="#">Getting started</a></div>
             </section>
@@ -103,7 +103,7 @@
                             <li>Unlimited storage</li>
                             <li>Build responsive website</li>
                         </ul>
-                    </div class="ulcenter">
+                    </div>
                 </div>
                 <div><a class="button" href="#">Getting started</a></div>
             </section>
