correction path images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <!-- NavBar  -->
             <nav id="navbar" class="flex">
-                    <div class="logo"><img src="/img/Logo-White.png" alt="" width="126" height="48"></div>
+                    <div class="logo"><img src="img/Logo-White.png" alt="" width="126" height="48"></div>
                     <menu class="flexSideSide">
                         <li><a class="TXTgrayDark TXTcenter" href="#">Home</a></li>
                         <li><a class="TXTgrayDark TXTcenter" href="#">Pages</a></li>
@@ -22,7 +22,7 @@
                         <li><a class="TXTgrayDark TXTcenter" href="#">Blog</a></li>
                         <li><a class="TXTgrayDark TXTcenter" href="#">Contact</a></li>
                     </menu>
-                    <div id="navbutton"><img src="/img/NavButton.svg" alt="" height="45" width="45"></div>
+                    <div id="navbutton"><img src="img/NavButton.svg" alt="" height="45" width="45"></div>
             </nav>
             <!-- Title  -->
             <section id="title">
@@ -183,7 +183,7 @@
         <div id="footbar" class="flexSideSide">
             <!-- Left  -->
             <div id="footleft">
-                <div class="logo"><img src="/img/Logo-White.png" alt="" width="126" height="48"></div>
+                <div class="logo"><img src="img/Logo-White.png" alt="" width="126" height="48"></div>
                 <p class="fSize18">The wise man therefore always holds in these on matters to this principle of selection he rejects the to secure other friend.</p>
             </div>
             <!-- Contact infos  -->
